tests/errors/compiler/no_semicolon_in_struct/test.c
struct str
{
	int field
};

void main()
{

}
